# tinybase

./: .gitignore  README.md  TODO.md  notes.md
base/: Cargo.toml  db.sqlite
base/db/: db.sqlite
base/src/: guessing_game.rs  main.rs
tiny/: index.html  package-lock.json  package.json  pnpm-lock.yaml
tiny/src/: index.jsx
tiny/src/api/: routes.js
tiny/src/components/: Header.jsx
tiny/src/pages/Home/: index.jsx
tiny/src/pages/Tables/: index.jsx
tiny/src/pages/auth/: Login.jsx
tiny/src/ui/: aui.css  aui.jsx  icons.jsx
tiny/src/ui/Table/: index.jsx  styles.css
